2007-05-07  Abel Cheung  <abelcheung@gmail.com>

	* showcode.php:
	New file for showing fragment code in popup window.

	* wp-scorerender.php:
	Add hook for showing stat in WP dashboard.

2007-05-06  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	scorerender_get_num_of_images(), scorerender_remove_cache() - Provide
	stat of number of cached images, and add button to remove images.

2007-04-14  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Add PHP 4 compatibility function for array_intersect_key().

2007-04-13  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Supports restricting number of fragment per comment.

2007-04-11  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, class.scorerender.inc.php:
	Supports restricting maximum length per fragment.

2007-04-11  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Drop support for configurable markup, people probably don't need that.

=== ScoreRender 0.1.2 ===

2007-03-30  Abel Cheung  <abelcheung@gmail.com>

	* class.*.php: Add +repage option to imagemagick.
	* wp-scorerender.php: Minor string change.

=== ScoreRender 0.1.1 ===

2007-03-14  Abel Cheung  <abelcheung@gmail.com>

	* class.lilypond.inc.php, class.scorerender.inc.php:
	Fix transparency rendering of lilypond fragment.
	* wp-scorerender.php:
	Big fat warning about conflict with "automatical XHTML nesting fix"
	option, instead of removing filter.

=== ScoreRender 0.1 ===

2007-03-13  Abel Cheung  <abelcheung@gmail.com>

	* TODO.txt: Add TODO.

2007-03-11  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Make error messages more consistent, thus less translation needed.

2007-03-11  Abel Cheung  <abelcheung@gmail.com>

	* class.lilypond.inc.php:
	Turn on safe mode again, and use convert -density option instead.
	* class.mup.inc.php:
	Fix blacklist tags.
	* class.scorerender.inc.php:
	Simplify convert command line.

2007-03-11  Abel Cheung  <abelcheung@gmail.com>

	* README.txt: